--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,700,700i" rel="stylesheet">
 
+    <!-- Icons -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
 
@@ -18,6 +21,9 @@
 
     <!-- New-Tweet CSS -->
     <link rel="stylesheet" type="text/css" href="/styles/new-tweet.css">
+
+    <!-- Tweets CSS -->
+    <link rel="stylesheet" type="text/css" href="/styles/tweets.css">
 
     <!-- External JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
@@ -32,23 +38,26 @@
   <body>
 
     <!-- Top nav bar (fixed) -->
-    <nav id="nav-bar flexContainer">
+    <nav id="nav-bar flex-container">
       <img class="logo" src="/images/bird.png">
       <span class="header">Tweeter</span>
     </nav>
 
     <!-- Page-specific (main) content here -->
-    <main class="container">
-      <section class="new-tweet">
+    <main id="main-container">
+      <section id="new-tweet">
         <h2>Compose Tweet</h2>
         <form method="POST" action="/tweets">
           <textarea name="text" id="tweet-input" placeholder="What are you humming about?"></textarea>
-          <div class="tweet-lower flexContainer">
-            <input type="submit" value="Tweet" class="flexItem submit">
-            <span class="counter flexItem">140</span>
+          <div class="tweet-lower flex-container">
+            <input type="submit" value="Tweet" class="flex-item submit">
+            <span class="counter flex-item">140</span>
           </div>
         </form>
       </section>
+
+      <section id="tweets"></section>
+
 
     </main>
 
