--- a/public/index.html
+++ b/public/index.html
@@ -41,13 +41,16 @@
     <nav id="nav-bar flex-container">
       <img class="logo" src="/images/bird.png">
       <span class="header">Tweeter</span>
+      <div id="compose-button" class="flex-container">
+        <i class="far fa-edit"></i>Compose
+      </div>
     </nav>
 
     <!-- Page-specific (main) content here -->
     <main id="main-container">
-      <section id="new-tweet">
+      <section id="new-tweet" class="hidden">
         <h2>Compose Tweet</h2>
-        <form method="POST" action="/tweets">
+        <form method="POST" action="/tweets" id="new-tweet-form">
           <textarea name="text" id="tweet-input" placeholder="What are you humming about?"></textarea>
           <div class="tweet-lower flex-container">
             <input type="submit" value="Tweet" class="flex-item submit">
