--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,9 @@
             <input type="submit" value="Tweet" class="flex-item submit">
             <span class="counter flex-item">140</span>
           </div>
+          <div class="error">
+            <span class="bold">Error: </span><span class="message"></span>
+          </div>
         </form>
       </section>
 
