--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
     <!-- Meta Information -->
     <title>Tweeter - Home Page</title>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <!-- External CSS -->
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
 
@@ -32,26 +34,47 @@
     <nav id="nav-bar flex-container">
       <img class="logo" src="/images/bird.png">
       <span class="header">Tweeter</span>
-      <div id="compose-button" class="flex-container">
+      <div class="compose-button desktop flex-container">
         <i class="far fa-edit"></i>Compose
       </div>
     </nav>
 
     <!-- Page-specific (main) content here -->
     <main id="main-container">
-      <section id="new-tweet" class="hidden">
-        <h2>Compose Tweet</h2>
-        <form method="POST" action="/tweets" id="new-tweet-form">
-          <textarea name="text" id="tweet-input" placeholder="What are you humming about?"></textarea>
-          <div class="tweet-lower flex-container">
-            <input type="submit" value="Tweet" class="flex-item submit">
-            <span class="counter flex-item">140</span>
-          </div>
-          <div class="error">
-            <span class="bold">Error: </span><span class="message"></span>
-          </div>
-        </form>
-      </section>
+      <div class="whitespace"></div>
+      <div class="compose-button mobile flex-container">
+        <i class="far fa-edit"></i>Compose
+      </div>
+      <div id="new-tweet-mobile-container">
+        <section class="new-tweet" class="hidden">
+          <h2>Compose Tweet</h2>
+          <form method="POST" action="/tweets" class="new-tweet-form">
+            <textarea name="text" class="tweet-input" placeholder="What are you humming about?"></textarea>
+            <div class="tweet-lower flex-container">
+              <input type="submit" value="Tweet" class="flex-item submit">
+              <span class="counter flex-item">140</span>
+            </div>
+            <div class="error">
+              <span class="bold">Error: </span><span class="message"></span>
+            </div>
+          </form>
+        </section>
+      </div>
+      <div id="new-tweet-desktop-container">
+        <section class="new-tweet" class="hidden">
+          <h2>Compose Tweet</h2>
+          <form method="POST" action="/tweets" class="new-tweet-form">
+            <textarea name="text" class="tweet-input" placeholder="What are you humming about?"></textarea>
+            <div class="tweet-lower flex-container">
+              <input type="submit" value="Tweet" class="flex-item submit">
+              <span class="counter flex-item">140</span>
+            </div>
+            <div class="error">
+              <span class="bold">Error: </span><span class="message"></span>
+            </div>
+          </form>
+        </section>
+      </div>
 
       <section id="tweets"></section>
 
