Fixed whitespace surrounding new-tweet form

--- a/public/index.html
+++ b/public/index.html
@@ -37,11 +37,12 @@
       <div class="compose-button desktop flex-container">
         <i class="far fa-edit"></i>Compose
       </div>
+      <div class="whitespace-mobile higher"></div>
+      <div class="whitespace-mobile lower"></div>
     </nav>
 
     <!-- Page-specific (main) content here -->
     <main id="main-container">
-      <div class="whitespace"></div>
       <div class="compose-button mobile flex-container">
         <i class="far fa-edit"></i>Compose
       </div>
@@ -61,6 +62,7 @@
         </section>
       </div>
       <div id="new-tweet-desktop-container">
+        <div class="whitespace-desktop"></div>
         <section class="new-tweet" class="hidden">
           <h2>Compose Tweet</h2>
           <form method="POST" action="/tweets" class="new-tweet-form">
